@@ -1,5 +1,6 @@
 package org.apereo.cas.oidc.profile;
 
+import lombok.extern.slf4j.Slf4j;
 import org.apereo.cas.authentication.principal.Principal;
 import org.apereo.cas.authentication.principal.PrincipalFactory;
 import org.apereo.cas.authentication.principal.Service;
@@ -12,14 +13,13 @@ import org.apereo.cas.oidc.claims.OidcCustomScopeAttributeReleasePolicy;
 import org.apereo.cas.oidc.claims.OidcEmailScopeAttributeReleasePolicy;
 import org.apereo.cas.oidc.claims.OidcPhoneScopeAttributeReleasePolicy;
 import org.apereo.cas.oidc.claims.OidcProfileScopeAttributeReleasePolicy;
-import org.apereo.cas.oidc.claims.mapping.OidcAttributeToScopeClaimMapper;
 import org.apereo.cas.services.ChainingAttributeReleasePolicy;
 import org.apereo.cas.services.DenyAllAttributeReleasePolicy;
 import org.apereo.cas.services.OidcRegisteredService;
 import org.apereo.cas.services.RegisteredService;
 import org.apereo.cas.services.ServicesManager;
 import org.apereo.cas.support.oauth.profile.DefaultOAuth20ProfileScopeToAttributesFilter;
-import org.apereo.cas.support.oauth.util.OAuth20Utils;
+import org.apereo.cas.ticket.accesstoken.AccessToken;
 import org.jooq.lambda.Unchecked;
 import org.pac4j.core.context.J2EContext;
 import org.reflections.Reflections;
@@ -27,12 +27,11 @@ import org.reflections.scanners.SubTypesScanner;
 import org.reflections.util.ClasspathHelper;
 import org.reflections.util.ConfigurationBuilder;
 import org.reflections.util.FilterBuilder;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -43,13 +42,11 @@ import java.util.Set;
  * @author Misagh Moayyed
  * @since 5.1.0
  */
+@Slf4j
 public class OidcProfileScopeToAttributesFilter extends DefaultOAuth20ProfileScopeToAttributesFilter {
-    private static final Logger LOGGER = LoggerFactory.getLogger(OidcProfileScopeToAttributesFilter.class);
-
     private final Map<String, BaseOidcScopeAttributeReleasePolicy> filters;
     private final Collection<BaseOidcScopeAttributeReleasePolicy> userScopes;
 
-    private final OidcAttributeToScopeClaimMapper attributeToScopeClaimMapper;
     private final PrincipalFactory principalFactory;
     private final ServicesManager servicesManager;
     private final CasConfigurationProperties casProperties;
@@ -57,9 +54,7 @@ public class OidcProfileScopeToAttributesFilter extends DefaultOAuth20ProfileSco
     public OidcProfileScopeToAttributesFilter(final PrincipalFactory principalFactory,
                                               final ServicesManager servicesManager,
                                               final Collection<BaseOidcScopeAttributeReleasePolicy> userScopes,
-                                              final OidcAttributeToScopeClaimMapper attributeToScopeClaimMapper,
                                               final CasConfigurationProperties casProperties) {
-        this.attributeToScopeClaimMapper = attributeToScopeClaimMapper;
         this.casProperties = casProperties;
         this.filters = new HashMap<>();
         this.principalFactory = principalFactory;
@@ -73,15 +68,16 @@ public class OidcProfileScopeToAttributesFilter extends DefaultOAuth20ProfileSco
         final OidcProperties oidc = casProperties.getAuthn().getOidc();
         final String packageName = BaseOidcScopeAttributeReleasePolicy.class.getPackage().getName();
         final Reflections reflections =
-                new Reflections(new ConfigurationBuilder()
-                        .filterInputsBy(new FilterBuilder().includePackage(packageName))
-                        .setUrls(ClasspathHelper.forPackage(packageName))
-                        .setScanners(new SubTypesScanner(true)));
+            new Reflections(new ConfigurationBuilder()
+                .filterInputsBy(new FilterBuilder().includePackage(packageName))
+                .setUrls(ClasspathHelper.forPackage(packageName))
+                .setScanners(new SubTypesScanner(true)));
 
         final Set<Class<? extends BaseOidcScopeAttributeReleasePolicy>> subTypes =
-                reflections.getSubTypesOf(BaseOidcScopeAttributeReleasePolicy.class);
+            reflections.getSubTypesOf(BaseOidcScopeAttributeReleasePolicy.class);
         subTypes.forEach(Unchecked.consumer(t -> {
-            final BaseOidcScopeAttributeReleasePolicy ex = t.newInstance();
+            final BaseOidcScopeAttributeReleasePolicy ex = t.getDeclaredConstructor().newInstance();
+
             if (oidc.getScopes().contains(ex.getScopeName())) {
                 LOGGER.debug("Found OpenID Connect scope [{}] to filter attributes", ex.getScopeName());
                 filters.put(ex.getScopeName(), ex);
@@ -99,22 +95,23 @@ public class OidcProfileScopeToAttributesFilter extends DefaultOAuth20ProfileSco
     @Override
     public Principal filter(final Service service, final Principal profile,
                             final RegisteredService registeredService,
-                            final J2EContext context) {
-        final Principal principal = super.filter(service, profile, registeredService, context);
+                            final J2EContext context, final AccessToken accessToken) {
+        final Principal principal = super.filter(service, profile, registeredService, context, accessToken);
 
         if (registeredService instanceof OidcRegisteredService) {
-            final OidcRegisteredService oidcService = (OidcRegisteredService) registeredService;
-            final Collection<String> scopes = new ArrayList<>(OAuth20Utils.getRequestedScopes(context));
-            scopes.addAll(oidcService.getScopes());
-
+            final Collection<String> scopes = new LinkedHashSet<>(accessToken.getScopes());
             if (!scopes.contains(OidcConstants.StandardScopes.OPENID.getScope())) {
-                LOGGER.debug("Request does not indicate a scope [{}] that can identify an OpenID Connect request. "
-                        + "This is a REQUIRED scope that MUST be present in the request. Given its absence, "
-                        + "CAS will not process any attribute claims and will return the authenticated principal as is.", scopes);
+                LOGGER.warn("Request does not indicate a scope [{}] that can identify an OpenID Connect request. "
+                    + "This is a REQUIRED scope that MUST be present in the request. Given its absence, "
+                    + "CAS will not process any attribute claims and will return the authenticated principal as is.", scopes);
                 return principal;
             }
 
-            final Map<String, Object> attributes = filterAttributesByScope(scopes, principal, service, oidcService);
+            final OidcRegisteredService oidcService = (OidcRegisteredService) registeredService;
+            scopes.retainAll(oidcService.getScopes());
+
+            final Map<String, Object> attributes = filterAttributesByScope(scopes, principal, service, oidcService, accessToken);
+            LOGGER.debug("Final collection of attributes filtered by scopes [{}] are [{}]", scopes, attributes);
             return this.principalFactory.createPrincipal(profile.getId(), attributes);
         }
         return principal;
@@ -123,17 +120,16 @@ public class OidcProfileScopeToAttributesFilter extends DefaultOAuth20ProfileSco
     private Map<String, Object> filterAttributesByScope(final Collection<String> stream,
                                                         final Principal principal,
                                                         final Service service,
-                                                        final RegisteredService registeredService) {
-        final OidcProperties oidc = casProperties.getAuthn().getOidc();
+                                                        final RegisteredService registeredService,
+                                                        final AccessToken accessToken) {
         final Map<String, Object> attributes = new HashMap<>();
         stream.stream()
-                .distinct()
-                .filter(this.filters::containsKey)
-                .forEach(s -> {
-                    final BaseOidcScopeAttributeReleasePolicy policy = filters.get(s);
-                    policy.setSupportedClaims(oidc.getClaims());
-                    attributes.putAll(policy.getAttributes(principal, service, registeredService));
-                });
+            .distinct()
+            .filter(this.filters::containsKey)
+            .forEach(s -> {
+                final BaseOidcScopeAttributeReleasePolicy policy = filters.get(s);
+                attributes.putAll(policy.getAttributes(principal, service, registeredService));
+            });
         return attributes;
     }
 
@@ -162,22 +158,22 @@ public class OidcProfileScopeToAttributesFilter extends DefaultOAuth20ProfileSco
                         break;
                     case ADDRESS:
                         LOGGER.debug("Mapped [{}] to attribute release policy [{}]", s,
-                                OidcAddressScopeAttributeReleasePolicy.class.getSimpleName());
+                            OidcAddressScopeAttributeReleasePolicy.class.getSimpleName());
                         policy.getPolicies().add(new OidcAddressScopeAttributeReleasePolicy());
                         break;
                     case PROFILE:
                         LOGGER.debug("Mapped [{}] to attribute release policy [{}]", s,
-                                OidcProfileScopeAttributeReleasePolicy.class.getSimpleName());
+                            OidcProfileScopeAttributeReleasePolicy.class.getSimpleName());
                         policy.getPolicies().add(new OidcProfileScopeAttributeReleasePolicy());
                         break;
                     case PHONE:
                         LOGGER.debug("Mapped [{}] to attribute release policy [{}]", s,
-                                OidcProfileScopeAttributeReleasePolicy.class.getSimpleName());
+                            OidcProfileScopeAttributeReleasePolicy.class.getSimpleName());
                         policy.getPolicies().add(new OidcPhoneScopeAttributeReleasePolicy());
                         break;
                     case OFFLINE_ACCESS:
                         LOGGER.debug("Given scope [{}], service [{}] is marked to generate refresh tokens", s, service.getId());
-                        oidc.setGenerateRefreshToken(Boolean.TRUE);
+                        oidc.setGenerateRefreshToken(true);
                         break;
                     case CUSTOM:
                         LOGGER.debug("Found custom scope [{}] for service [{}]", s, service.getId());
@@ -189,12 +185,12 @@ public class OidcProfileScopeToAttributesFilter extends DefaultOAuth20ProfileSco
                 }
             } catch (final Exception e) {
                 LOGGER.debug("[{}] appears to be a user-defined scope and does not match any of the predefined standard scopes. "
-                        + "Checking [{}] against user-defined scopes provided as [{}]", s, s, userScopes);
+                    + "Checking [{}] against user-defined scopes provided as [{}]", s, s, userScopes);
 
                 final BaseOidcScopeAttributeReleasePolicy userPolicy = userScopes.stream()
-                        .filter(t -> t.getScopeName().equals(s.trim()))
-                        .findFirst()
-                        .orElse(null);
+                    .filter(t -> t.getScopeName().equals(s.trim()))
+                    .findFirst()
+                    .orElse(null);
                 if (userPolicy != null) {
                     LOGGER.debug("Mapped user-defined scope [{}] to attribute release policy [{}]", s, userPolicy);
                     policy.getPolicies().add(userPolicy);
@@ -204,20 +200,20 @@ public class OidcProfileScopeToAttributesFilter extends DefaultOAuth20ProfileSco
         otherScopes.remove(OidcConstants.StandardScopes.OPENID.getScope());
         if (!otherScopes.isEmpty()) {
             LOGGER.debug("Mapped scopes [{}] to attribute release policy [{}]", otherScopes,
-                    OidcCustomScopeAttributeReleasePolicy.class.getSimpleName());
+                OidcCustomScopeAttributeReleasePolicy.class.getSimpleName());
             policy.getPolicies().add(new OidcCustomScopeAttributeReleasePolicy(otherScopes));
         }
 
         if (policy.getPolicies().isEmpty()) {
-            LOGGER.warn("No attribute release policy could be determined based on given scopes. "
-                    + "No claims/attributes will be released to [{}]", service.getId());
+            LOGGER.debug("No attribute release policy could be determined based on given scopes. "
+                + "No claims/attributes will be released to [{}]", service.getServiceId());
             oidc.setAttributeReleasePolicy(new DenyAllAttributeReleasePolicy());
         } else {
             oidc.setAttributeReleasePolicy(policy);
         }
 
         LOGGER.debug("Scope/claim reconciliation for service [{}] resulted in the following attribute release policy [{}]",
-                service.getServiceId(), oidc.getAttributeReleasePolicy());
+            service.getServiceId(), oidc.getAttributeReleasePolicy());
 
         if (!oidc.equals(service)) {
             LOGGER.debug("Saving scope/claim reconciliation results for service [{}] into registry", service.getServiceId());
@@ -227,6 +223,6 @@ public class OidcProfileScopeToAttributesFilter extends DefaultOAuth20ProfileSco
             LOGGER.debug("No changes detected in service [{}] after scope/claim reconciliation", service.getId());
         }
 
-        policy.getPolicies().forEach(p -> ((BaseOidcScopeAttributeReleasePolicy)p).setSupportedClaims(casProperties.getAuthn().getOidc().getClaims()));
+        //policy.getPolicies().forEach(p -> ((BaseOidcScopeAttributeReleasePolicy)p).setSupportedClaims(casProperties.getAuthn().getOidc().getClaims()));
     }
 }
